--- a/code-ch05/Chapter5.ipynb
+++ b/code-ch05/Chapter5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1\n",
     "\n",
@@ -42,9 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3045022100ed81ff192e75a3fd2304004dcadb746fa5e24c5031ccfcf21320b0277457c98f02207a986d955c6e0cb35d446a89d3f56100f4d7f67801c31967743a9c8e10615bed01 0349fc4e631e3624a545de3f89f5d8684c7b8138bd94bdd531d2e213bf016b278a\n"
+     ]
+    }
+   ],
    "source": [
     "from io import BytesIO\n",
     "from script import Script\n",
@@ -67,9 +87,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E\n",
+      "======================================================================\n",
+      "ERROR: test_parse_inputs (tx.TxTest)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/root/eth/programmingbitcoin/code-ch05/tx.py\", line 266, in test_parse_inputs\n",
+      "    self.assertEqual(tx.tx_ins[0].prev_tx, want)\n",
+      "AttributeError: 'NoneType' object has no attribute 'prev_tx'\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "FAILED (errors=1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -198,7 +238,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
